--- a/charts/path/templates/service.yaml
+++ b/charts/path/templates/service.yaml
@@ -6,10 +6,10 @@ kind: Service
 metadata:
   name: {{$name}}-{{ $prt.name }}
   labels:
-    app: {{$name}}
+    app.kubernetes.io/name: {{$name}}
 spec:
   selector:
-    app: {{$name}}
+    app.kubernetes.io/name: {{$name}}
   ports:
     - name: {{ $prt.name }}
       protocol: {{ $prt.protocol }}
