chore: add comments for route generation files

--- a/charts/guard/templates/http-header-routes.yaml
+++ b/charts/guard/templates/http-header-routes.yaml
@@ -1,16 +1,18 @@
 # This template generates HTTPRoute resources for each service in the `services` list.
 # Each HTTPRoute is configured to route requests based on the subdomain of the request.
 #
-# The `hostnames` field specifies the subdomain that will be matched against the request,
-# and the `filters` section assigns the `target-service-id` header to the request based 
-# on the subdomain service alias.
-#
 # For example:
-# F00C.path.grove.city -> "target-service-id: F00C"
-# eth.path.grove.city -> "target-service-id: F00C"
-# polygon.path.grove.city -> "target-service-id: F021"
+# -H "target-service-id: F00C" -> "target-service-id: F00C"
+# -H "target-service-id: eth" -> "target-service-id: F00C"
+# -H "target-service-id: polygon" -> "target-service-id: F021"
+#
+# For each service, multiple HTTPRoute resources are created:
+# - One HTTPRoute for the authoritative service ID 
+# - One additional HTTPRoute for EACH service alias
 #
 # The HTTPRoute resources are created based on the `services` list in the `values.yaml` file.
+
+# Create an HTTPRoute resource for each authoritative service ID.
 {{- range .Values.services }}
 {{- $service := . }}
 ---
@@ -18,6 +20,7 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 
 metadata:
+  # eg. F00C-header-route
   name: {{ $service.serviceId | lower }}-header-route
   namespace: {{ $.Values.namespace }}
 
@@ -27,17 +30,11 @@ spec:
     namespace: {{ $.Values.namespace }}
 
   rules:
+  # Determine the backend service to route to.
   - backendRefs:
     - name: {{ $.Values.serviceName }}
       namespace: {{ $.Values.namespace }}
       port: {{ $.Values.port }}
-
-    filters:
-    - type: RequestHeaderModifier
-      requestHeaderModifier:
-        set:
-        - name: "target-service-id"
-          value: "{{ $service.serviceId }}"
           
     matches:
     - path:
@@ -47,6 +44,7 @@ spec:
       - name: target-service-id
         value: "{{ $service.serviceId }}"
 
+# If the service has aliases, create an HTTPRoute resource for each alias.
 {{- if $service.aliases }}
 {{- range $service.aliases }}
 ---
@@ -54,6 +52,7 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 
 metadata:
+  # eg. F00C-eth-alias-header-route
   name: {{ $service.serviceId | lower }}-{{ . | lower }}-alias-header-route
   namespace: {{ $.Values.namespace }}
 
@@ -63,12 +62,14 @@ spec:
     namespace: {{ $.Values.namespace }}
 
   rules:
+  # Determine the backend service to route to.
   - backendRefs:
     - name: {{ $.Values.serviceName }}
       namespace: {{ $.Values.namespace }}
       port: {{ $.Values.port }}
 
     filters:
+    # Ensure the request header "target-service-id" is set to the authoritative service ID.
     - type: RequestHeaderModifier
       requestHeaderModifier:
         set:
@@ -76,9 +77,11 @@ spec:
           value: "{{ $service.serviceId }}"
           
     matches:
+      # Match any path prefix that starts with "/v1"
       - path:
           type: PathPrefix
           value: /v1
+        # Match any `target-service-id` header value that matches the alias.
         headers:
         - name: target-service-id
           value: "{{ . | lower }}"
