--- a/charts/guard/templates/http-subdomain-routes.yaml
+++ b/charts/guard/templates/http-subdomain-routes.yaml
@@ -1,30 +1,39 @@
-# This template generates HTTPRoute resources for each service in the `services` list.
-# Each HTTPRoute is configured to route requests based on the subdomain of the request.
+# This template generates an HTTPRoute resource for each service in the `services` list.
+# Each HTTPRoute is configured to route requests based on the subdomain of the request,
+# which can be either the service ID or any of its aliases.
 #
-# The `hostnames` field specifies the subdomain that will be matched against the request,
-# and the `filters` section assigns the `target-service-id` header to the request based 
-# on the subdomain service alias.
+# The `hostnames` field specifies the subdomains that will be matched against the request.
 #
-# For example:
-# F00C.path.grove.city -> "target-service-id: F00C"
-# eth.path.grove.city -> "target-service-id: F00C"
-# polygon.path.grove.city -> "target-service-id: F021"
-#
-# The HTTPRoute resources are created based on the `services` list in the `values.yaml` file.
+# For example, if a service has the following configuration:
+#   serviceId: F00C
+#   aliases:
+#     - eth
+#     - eth-mainnet
+# The generated HTTPRoute will match requests to:
+#   - F00C.path.grove.city
+#   - eth.path.grove.city
+#   - eth-mainnet.path.grove.city
+# All matched requests will have the header "target-service-id: F00C" added.
+
+# Create an HTTPRoute resource for each authoritative service ID.
+# This HTTPRoute will also match requests to any of the service's aliases
+# through the use of the `hostnames` field.
 {{- range .Values.services }}
 ---
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 
 metadata:
+  # eg. F00C-subdomain-route
   name: {{ .serviceId | lower }}-subdomain-route
   namespace: {{ $.Values.namespace }}
 
-spec:
+spec: 
   parentRefs:
   - name: eg
     namespace: {{ $.Values.namespace }}
 
+  # Match requests based on their subdomain.
   hostnames:
   - "{{ .serviceId | lower }}.{{ $.Values.domain }}"
   {{- if .aliases }}
@@ -34,12 +43,14 @@ spec:
   {{- end }}
 
   rules:
+  # Determine the backend service to route to.
   - backendRefs:
     - name: {{ $.Values.serviceName }}
       namespace: {{ $.Values.namespace }}
       port: {{ $.Values.port }}
 
     filters:
+    # Ensure the request header "target-service-id" is set to the authoritative service ID.
     - type: RequestHeaderModifier
       requestHeaderModifier:
         set:
@@ -47,6 +58,7 @@ spec:
           value: "{{ .serviceId }}"
 
     matches:
+    # Match any path prefix that starts with "/v1"
     - path:
         type: PathPrefix
         value: /v1
