--- a/charts/guard/templates/http-healthz-route.yaml
+++ b/charts/guard/templates/http-healthz-route.yaml
@@ -2,7 +2,7 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: backend
+  name: healthz-route
 spec:
   parentRefs:
     - name: eg
