--- a/charts/guard/templates/http-notfound-route.yaml
+++ b/charts/guard/templates/http-notfound-route.yaml
@@ -8,7 +8,7 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: resource-not-found
+  name: resource-not-found-route
 spec:
   parentRefs:
   - name: eg
